show list on web page
Signed-off-by: Janith Disanayake <janithdisanayake@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Go + HTMX</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Go + HTMX</title>
 </head>
 <body>
+    <h1>Hello World</h1>
 
-<h1>Hello World</h1>
+    {{ range .Films }}
+        <p> {{ .Title }} - {{ .Director}} </p>
+    {{ end }} 
 
 </body>
 </html>
