--- a/endpoints/index.html
+++ b/endpoints/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
     <title>Go + HTMX</title>
 </head>
 <body>
     <h1>Hello World</h1>
 
     {{ range .Films }}
-        <p> {{ .Title }} - {{ .Director}} </p>
+        <p> {{ .Title }} - {{ .Director }} </p>
     {{ end }} 
 
 </body>
